--- a/Tut.html
+++ b/Tut.html
@@ -406,5 +406,15 @@
   }, 3000);
 
 </script>
+  <script>
+  window.chatbaseConfig = {
+    chatbotId: "NzyAOomDU4KKosZpz2cMl",
+  }
+</script>
+<script
+  src="https://www.chatbase.co/embed.min.js"
+  id="NzyAOomDU4KKosZpz2cMl"
+  defer>
+</script>
 
 </html>
