--- a/Voice Assistant.html
+++ b/Voice Assistant.html
@@ -296,6 +296,16 @@
     // ... (rest of your code)
 
   </script>
+  <script>
+  window.chatbaseConfig = {
+    chatbotId: "NzyAOomDU4KKosZpz2cMl",
+  }
+</script>
+<script
+  src="https://www.chatbase.co/embed.min.js"
+  id="NzyAOomDU4KKosZpz2cMl"
+  defer>
+</script>
 </body>
 
 </html>
