--- a/Worspace2.html
+++ b/Worspace2.html
@@ -468,6 +468,16 @@
     }, 3000);
 
   </script>
+  <script>
+  window.chatbaseConfig = {
+    chatbotId: "NzyAOomDU4KKosZpz2cMl",
+  }
+</script>
+<script
+  src="https://www.chatbase.co/embed.min.js"
+  id="NzyAOomDU4KKosZpz2cMl"
+  defer>
+</script>
 </body>
 
 </html>
