--- a/index.html
+++ b/index.html
@@ -1331,16 +1331,12 @@
     });
   }, 3000);
 
-</script>
-  <script>
+<script defer>
   window.chatbaseConfig = {
     chatbotId: "NzyAOomDU4KKosZpz2cMl",
   }
 </script>
-<script
-  src="https://www.chatbase.co/embed.min.js"
-  id="NzyAOomDU4KKosZpz2cMl"
-  defer>
-</script>
+<script defer src="https://www.chatbase.co/embed.min.js" id="NzyAOomDU4KKosZpz2cMl"></script>
+
 
 </html>
