--- a/Worspace2.html
+++ b/Worspace2.html
@@ -413,7 +413,7 @@
     <p>&copy; 2023 YourCompany. All rights reserved.</p>
   </footer>
   <div class="starting">
-    <h1><span class="s1">A</span><span class="s2">H</span><span class="s3">D</span>
+    <h1><span class="s1">A</span><span class="s2">D</span><span class="s3">H</span>
   </div>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
