--- a/nice.html
+++ b/nice.html
@@ -758,7 +758,7 @@
   </form>
   </div>
   <div class="starting">
-    <h1><span class="s1">A</span><span class="s2">H</span><span class="s3">D</span>
+    <h1><span class="s1">A</span><span class="s2">D</span><span class="s3">H</span>
   </div>
 
 
