--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -1278,7 +1280,7 @@
     <p>&copy; 2023 YourCompany. All rights reserved.</p>
 </footer> -->
   <div class="starting">
-    <h1><span class="s1">A</span><span class="s2">D</span><span class="s3">H</span>
+    <h1><span class="s1">A</span><span class="s2">H</span><span class="s3">D</span>
   </div>
 </body>
 
@@ -1308,6 +1310,16 @@
   };
 
 </script>
+<script>
+  window.chatbaseConfig = {
+    chatbotId: "NzyAOomDU4KKosZpz2cMl",
+  }
+</script>
+<script
+  src="https://www.chatbase.co/embed.min.js"
+  id="NzyAOomDU4KKosZpz2cMl"
+  defer>
+</script>
 
 
 
@@ -1332,6 +1344,6 @@
   }, 3000);
 
 
-
+</script>
 
 </html>
