--- a/index.html
+++ b/index.html
@@ -1346,4 +1346,17 @@
 
 </script>
 
+    <script>
+window.embeddedChatbotConfig = {
+chatbotId: "y99v9Zsr6kziwQMTeeYfy",
+domain: "www.chatbase.co"
+}
+</script>
+<script
+src="https://www.chatbase.co/embed.min.js"
+chatbotId="y99v9Zsr6kziwQMTeeYfy"
+domain="www.chatbase.co"
+defer>
+</script>
+
 </html>
