--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@
         <div class="fetu" id="inf1">
 
           <img src="https://dioncdz.github.io/google-homepage/img/mic.png" alt="" id="i4">
-          <h3>Voice assistant</h3>
+          <h3>voice assisted prescription</h3>
 
 
 
