--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
       <h2><img
           src="https://d3n8a8pro7vhmx.cloudfront.net/themes/5db7bca4c29480c061890f10/attachments/original/1553643295/login.png?1553643295"
           alt="" id="i3"><span class="s12">Book an Appointment</span></h2>
-      <p>Book Your Appointment To Faster Tretment.</p>
+      <p>Book Your Appointment To Fast Treatment.</p>
       <button><a href="nice.html">Book Now</a></button>
     </div>
 
